--- a/frontend/SingIn.html
+++ b/frontend/SingIn.html
@@ -40,8 +40,10 @@ http://www.templatemo.com/tm-466-cafe-house
         <div class="row">
           <div class="tm-top-header-inner logo-login-center">
             <div class="tm-logo-container logo-login-center">
-              <img src="img/logo.png" alt="Logo" class="tm-site-logo">
-              <h1 class="tm-site-name tm-handwriting-font">Cafe House</h1>
+              <a href="index.html">
+                <img src="img/logo.png" alt="Logo" class="tm-site-logo">
+                <h1 class="tm-site-name tm-handwriting-font">Cafe House</h1>
+              </a>
             </div>
           </div>           
         </div>    
