--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -123,7 +123,9 @@ http://www.templatemo.com/tm-466-cafe-house
             </div>
         </div>
         <div class="text-right">
-          <button class="btn btn-lg btn-block btn-success text-uppercase outline">Checkout</button>
+          <a href="cart.html">
+            <button class="btn btn-lg btn-block btn-success text-uppercase outline">Thanh toán</button>
+          </a>
         </div>
       </div>
     </div>
